# ROS_Create3_Agent

./: .gitattributes  .gitignore  NOTICE  README.md  launch.sh  setup.sh
ros_create3_agent/: .env  package.xml  setup.cfg  setup.py
ros_create3_agent/launch/: agent.launch.py
ros_create3_agent/resource/: ros_create3_agent
ros_create3_agent/ros_create3_agent/: __init__.py  agent.py  logging.py  rosa_config.py
ros_create3_agent/ros_create3_agent/llm/: __init__.py  llm.py  prompts.py
ros_create3_agent/ros_create3_agent/robot/: __init__.py  robot_state.py  safety.py  tools.py
ros_create3_agent/ros_create3_agent/robot/core/: __init__.py  docking.py  info.py  movement.py  sensing.py  sequences.py  user_interface.py
ros_create3_agent/ros_create3_agent/robot/core/audio/: __init__.py  actions.py  tunes.py
ros_create3_agent/ros_create3_agent/robot/core/dance/: __init__.py  choreographer.py  patterns.py  publisher.py
ros_create3_agent/ros_create3_agent/robot/core/lightring/: __init__.py  color_palette.py  publisher.py
ros_create3_agent/ros_create3_agent/utils/: __init__.py  ros_threading.py
ros_create3_agent/ros_create3_agent/web/: __init__.py  app.py
ros_create3_agent/ros_create3_agent/web/audio/: audio_system.py
ros_create3_agent/ros_create3_agent/web/audio/speech_files/: dance.m4a  hazards.m4a  moving.m4a  navigating.m4a  picked_up.m4a  rotating.m4a  task_completed.m4a  undocking.m4a
ros_create3_agent/ros_create3_agent/web/static/css/: style.css
ros_create3_agent/ros_create3_agent/web/static/js/: main.js  script.js
ros_create3_agent/ros_create3_agent/web/static/js/modules/: api.js  chat.js  ui.js
ros_create3_agent/ros_create3_agent/web/static/js/modules/robot/: battery.js  hazards.js  motion.js  sensors.js  update.js
ros_create3_agent/ros_create3_agent/web/templates/: index.html
rosa_create3_agent/: .env  package.xml  pyproject.toml  setup.cfg  setup.py
rosa_create3_agent/launch/: agent.launch.py
rosa_create3_agent/resource/: rosa_create3_agent
rosa_create3_agent/rosa_create3_agent/: llm.py  prompts.py  rosa_create3_agent.py  tools.py
rosa_create3_agent/rosa_create3_agent/launch/: agent_launch.py
