<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>ros_create3_agent</name>
  <version>1.0.0</version>
  <description>Embodied ROS agent for the iRobot Create 3 robot.</description>

  <maintainer email="psingh@supertechft.org">Prince Singh</maintainer>
  <maintainer email="cquach@supertechft.org">Calvin Quach</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://supertechft.org/</url>
  <url type="repository">https://github.com/supertechft/ros_create3_agent</url>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- TODO: Might need to change some of these to build_depend -->
  <exec_depend>jpl-rosa</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>irobot_create_msgs</exec_depend>
  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-webbrowser</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
