<!-- TODO: Edit this file -->

<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>rosa_create3_agent</name>
  <version>0.0.1</version>
  <description>Embodied ROSA agent for the iRobot Create 3 robot.</description>

  <!-- TODO: Add maintainers -->
  <maintainer email="psingh@supertechft.org">Prince Singh</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://supertechft.org/</url>
  <url type="repository">https://github.com/supertechft/ROSA_Create3_Agent</url>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <depend>rclpy</depend>
  <depend>irobot_create_msgs</depend>
  <depend>irobot_create_gz_bringup</depend>
  <depend>rosa</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
